<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">EcoGestión</string>
    <string name="app_subtitle">Ministerio de Ambiente de Córdoba</string>
    <string name="hint_usuario">Usuario</string>
    <string name="hint_contrasena">Contraseña</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="error_campo_vacio">Este campo es obligatorio</string>
    <string name="error_credenciales">Usuario o contraseña incorrectos</string>
    <string name="error_usuario_inactivo">El usuario se encuentra inactivo</string>
    <string name="login_bienvenida">Bienvenido/a</string>
    <string name="version">v1.0</string>
    <string name="nav_open">Abrir menú</string>
    <string name="nav_close">Cerrar menú</string>
</resources>
